crates/engine/tests/rules/snapshots/rules__combat__combat_first_strike_kills_before_regular.snap
---
source: crates/engine/tests/rules/combat.rs
expression: runner.snapshot()
---
{
  "players": [
    {
      "life": 20,
      "hand": [],
      "graveyard": []
    },
    {
      "life": 20,
      "hand": [],
      "graveyard": [
        "Bear"
      ]
    }
  ],
  "battlefield": [
    {
      "name": "Knight",
      "owner": 0,
      "power": 2,
      "toughness": 2,
      "tapped": true,
      "damage": 0,
      "keywords": [
        "FirstStrike"
      ]
    }
  ],
  "stack": [],
  "events": []
}
